# youtube_mikroservice_fastapi

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.dev.yml  docker-compose.yml  realm-export.json
chat/: docker-compose.chat.yml  main.py  pyproject.toml
chat/chat/core/: config.py
chat/chat/database/: session.py
comment/: Dockerfile  docker-compose.comment.yml  main.py  pyproject.toml
comment/comment/api/v1/controller/: comment.py
comment/comment/api/v1/depends/: comment.py
comment/comment/api/v1/domain/repository/: comment.py
comment/comment/api/v1/domain/services/: comment.py
comment/comment/api/v1/routes/: comment.py
comment/comment/api/v1/schemas/: comment.py
comment/comment/core/: config.py
comment/comment/database/: redis_cache.py  session.py
comment/comment/database/models/: __init__.py  comment.py
likes/: docker-compose.likes.yml  pyproject.toml
likes/likes/api/v1/controller/: reaction.py
likes/likes/api/v1/depends/: reaction.py
likes/likes/api/v1/domain/repository/: reaction.py
likes/likes/api/v1/domain/services/: reaction.py
likes/likes/api/v1/routes/: reaction.py
likes/likes/api/v1/schemas/: reaction.py
likes/likes/core/: config.py
likes/likes/database/: session.py
likes/likes/database/models/: __init__.py  likes.py
users/: docker-compose.users.yml  main.py  pyproject.toml
users/keycloak/: Dockerfile  realm-export.json
users/migrations/: env.py
users/users/api/: auth.py
users/users/api/v1/routes/: auth.py
users/users/api/v1/schemas/: token.py
users/users/core/: config.py
users/users/crud/: user.py
users/users/database/: session.py
users/users/database/models/: user.py
users/users/permissins/: user.py
users/users/schemas/: user.py
users/users/services/: auth_token.py  user.py
video/: docker-compose.video.yml  entrypoint.sh  main.py  mainv.py  pyproject.toml
video/migrations/: env.py
video/redis/: redis.conf
video/video/api/: video.py
video/video/api/v1/routes/: video.py
video/video/api/v1/tasks/: tasks.py
video/video/core/: config.py
video/video/crud/: base_crud.py  comment.py  video.py
video/video/database/: redis_cache.py  session.py
video/video/database/models/: __init__.py  base.py  video.py
video/video/schemas/: video.py
video/video/services/: video.py
video/video/templates/: index.html
(+7 files in other folders)
