[tool.poetry]
name = "comment"
version = "0.1.0"
description = ""
authors = ["Idel Fazletdinov <fvi-it@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
sqlalchemy = {extras = ["all"], version = "^2.0.28"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
