[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Idel Fazletdinov <fvi-it@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
bcrypt = "^4.1.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-keycloak = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
