[tool.poetry]
name = "video"
version = "0.1.0"
description = ""
authors = ["Idel Fazletdinov <fvi-it@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
redis = "^5.0.3"
celery = "^5.3.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
pre-commit = "^3.6.2"
types-redis = "^4.6.0.20240311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
